@startuml diagram

title MER - 

skinparam linetype ortho

entity "pagamento" as pagamento {
  *id : number <<generated>>
  --
  *nome : text
  valor: monetary
}

entity "pedido" as pedido {
  *id : number <<generated>>
  --
  status: text
}

entity "itens" as itens {
  *id : number <<generated>>
  --
  *pedido_id : number <<FK>>
  *pagamento_id : number <<FK>>
  quantidade: number
  valor: monetary
 
}

pagamento ||--o{ itens
pedido ||--o{ itens

@enduml